LS-4 Add hot reload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       env_file: .env
       tty: true
       init: true
+      volumes:
+      - ./:/backend
       # depends_on:
       #   - postgis
       networks:
