--- a/docker/Dockerfile-golang
+++ b/docker/Dockerfile-golang
@@ -2,9 +2,13 @@ FROM golang:latest
 
 WORKDIR /backend
 
-COPY ./backend /backend
+COPY ./backend .
 
 RUN go mod download
-RUN go build ./cmd/api/main.go
+
+RUN go get github.com/githubnemo/CompileDaemon
+
 EXPOSE 8080
-ENTRYPOINT ./main
+WORKDIR "./backend"
+
+ENTRYPOINT CompileDaemon --build="go build ./cmd/api/main.go" --command=./main
